--- a/my-app/src/style.css
+++ b/my-app/src/style.css
@@ -1,3 +1,4 @@
+/*Main document style*/
 body,h1,p,button,nav,footer{
 
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -12,6 +13,7 @@ header{
     max-width: 100vw;
     max-height: 100vh;
 }
+/*List styles*/
 ul{
     list-style-type: none;
     margin:0;
@@ -42,4 +44,9 @@ li a:hover
 }
 .active {
     background-color: darkmagenta;
+}
+/*Image parallax style*/
+.parallax {
+
+
 }
