--- a/my-app/src/style.css
+++ b/my-app/src/style.css
@@ -1,7 +1,24 @@
+@font-face {
+    font-family: Risk Of Rain;
+    src: url(../src/lib/fonts/BOMBARD_.woff) format("woff");
+    /*src: url(../src/lib/fonts/BOMBARD_.ttf) format("ttf");*/
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 /*Main document style*/
-body,h1,p,button,nav,footer{
+body,p,button,nav,footer{
 
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    height: 100%;
+}
+h1{
+    font-family: "Risk Of Rain"; 
+    color: white; 
+    font-size: 74px;
+    -webkit-text-stroke-width: 0.5px;
+    -webkit-text-stroke-color: #111;
 }
 header{
     margin-left:50%; 
@@ -25,22 +42,25 @@ li {
     display: inline;
     float: left;
 }
-a{
+a {
     display: block;
     padding: 8px;
     background-color: #333;
 }
-li a{
+li a {
     display: block;
     color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
-li a:hover
-{
+li a:hover {
     background-color: #111;
 
+}
+img {
+height: 100%;
+width: 100%;
 }
 .active {
     background-color: darkmagenta;
@@ -49,4 +69,18 @@ li a:hover
 .parallax {
 
 
+height: 100%;
+margin: 10px;
+background-attachment: fixed;
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
+/*position: relative;
+/*background-image: url("/Backgorun.png");
+background-size: cover;
+background-position: center center;    
+background-attachment: fixed;
+color: rgb(0, 0, 0);
+text-align: center;
+cursor: default;*/
 }
