--- a/my-app/src/style.css
+++ b/my-app/src/style.css
@@ -8,30 +8,29 @@
 }
 
 /*Main document style*/
-body,p,button,nav,footer{
+body,p,button,nav,footer {
 
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     height: 100%;
 }
-h1{
+h1 {
     font-family: "Risk Of Rain"; 
     color: white; 
     font-size: 74px;
     -webkit-text-stroke-width: 0.5px;
     -webkit-text-stroke-color: #111;
 }
-header{
+header {
     margin-left:50%; 
 }
-.flex-container
-{
+.flex-container {
     display: flex;
     flex-wrap: wrap;
     max-width: 100vw;
     max-height: 100vh;
 }
 /*List styles*/
-ul{
+ul {
     list-style-type: none;
     margin:0;
     padding: 0;
@@ -63,7 +62,7 @@ height: 100%;
 width: 100%;
 }
 .active {
-    background-color: darkmagenta;
+    background-color: #5ADFE6;
 }
 /*Image parallax style*/
 .parallax {
