feat : add json fetch libs

--- a/my-app/src/style.css
+++ b/my-app/src/style.css
@@ -12,6 +12,7 @@ body,p,button,nav,footer {
 
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     height: 100%;
+    margin: auto;
 }
 h1 {
     font-family: "Risk Of Rain"; 
